<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24272E"
    tools:context=".MainActivity">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVCurrencies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idEditText" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:background="@drawable/rounded_edit_text"
        android:drawablePadding="10dp"
        android:hint="Search cryptocurrencies..."
        android:textColor="#d2b1be"
        android:textColorHint="#3e4c65" />



    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idPBLoading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>